[package]
name = "gitignore_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gig"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
inquire = "0.7.4"
reqwest = { version = "0.12.3", features = ["blocking"] }
